--- a/game/game.css
+++ b/game/game.css
@@ -2,7 +2,9 @@
     border: 5px outset gray; 
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: aliceblue;
+    margin: 0 34%;
     padding: 20px;
+    float: left;
 }
 #mainHeading {
     text-align: center;
