--- a/game/game.css
+++ b/game/game.css
@@ -1,10 +1,11 @@
 .container {
-    border: 5px outset gray; 
+     border: 5px outset gray; 
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: aliceblue;
-    margin: 0 34%;
+    margin: 0 20%;
     padding: 20px;
     float: left;
+    min-width: 450px;
 }
 #mainHeading {
     text-align: center;
